<resources>
    <string name="app_name">أوسيم</string>
    <string name="doctors">الأطباء</string>
    <string name="view">مشاهدة</string>
    <string name="restaurant">المطاعم</string>
    <string name="Aml">دكتورة : أمل</string>
    <string name="baby">أطفال وحديث الولادة</string>
    <string name="call">الإتصال</string>
    <string name="mohamedNasr">دكتور : محمد نصر</string>
    <string name="justbaby">أطفال</string>
    <string name="fadybder">دكتور : فادي بدير</string>
    <string name="bone">عظام</string>
    <string name="ahmedabdelmohsen">دكتور : أحمد عبدالمحسن</string>
    <string name="eye">رمد</string>
    <string name="zezofish"> زيزو</string>
    <string name="fish">أسماك</string>
    <string name="wahedeltawel">دكتوره : وحيد الطويل</string>
    <string name="generalsergury">جراحة عامة</string>
    <string name="gawhartelmadina">جوهرة المدينه</string>
    <string name="gril">مشويات</string>
    <string name="elhana"> الهنا</string>
    <string name="osamagril">اسامه </string>
    <string name="maka">مكه</string>
    <string name="omhashem">مسمط ام هاشم</string>
    <string name="elyamany">اليمني</string>
    <string name="kosharyelamora"> الأمور</string>
    <string name="koshary">كشري</string>
    <string name="kosharyelhag">حجاج</string>
    <string name="hamdyelatfy">دكتور : حمدي العطفي</string>
    <string name="laboratory">معمل تحاليل</string>
    <string name="heshamelatfy">دكتور : هشام العطفي</string>
    <string name="nerves">مخ و اعصاب</string>
    <string name="mohamedelsamry">دكتور : محمد السمري</string>
    <string name="nose">أنف وأذن</string>
    <string name="sherifabdelbar">دكتور : شريف عبالبر</string>
    <string name="kamanana">كامننا</string>
    <string name="pizza">بيتزا و كريب</string>
    <string name="amyagamal">عمرو يا جمل</string>
    <string name="pizzakaslan"> الكسلان</string>
    <string name="justpizza">بيتزا</string>
    <string name="ahmedsamir">دكتور : أحمد سمير</string>
    <string name="stomach">باطنه</string>
    <string name="mohamedhesham">دكتور : محمد هشام</string>
    <string name="fathyhashesh">دكتور : فتحي حشيش</string>
    <string name="ahmedsolaiman">دكتور : أحمد سليمان</string>
    <string name="rehamyousef">دكتورة : ريهام يوسف</string>
    <string name="toothjustwomen">اسنان - للسيدات والاطفال فقط</string>
    <string name="hossamghorab">دكتور : حسام غراب</string>
    <string name="tooth">اسنان</string>
    <string name="woman">نساء وتوليد</string>
    <string name="karimeltawel">دكتور : كريم الطويل</string>
    <string name="specialization">التخصصات</string>
</resources>
