<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WomanActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="6dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_woman_Name1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:drawableStart="@drawable/ic_doctor"
                        android:fontFamily="@font/cairo_bold"
                        android:gravity="center"
                        android:text="@string/karimeltawel"
                        android:textColor="@color/blackfont"
                        android:textSize="22sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/textView_woman_type1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:drawableStart="@drawable/ic_woman"
                        android:fontFamily="@font/cairo_bold"
                        android:gravity="center"
                        android:text="@string/woman"
                        android:textColor="@color/blackfont"
                        android:textSize="22sp"
                        android:textStyle="bold">

                    </TextView>

                    <TextView
                        android:id="@+id/textView_woman_phone1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:drawableStart="@drawable/ic_phone"
                        android:fontFamily="@font/cairo_bold"
                        android:gravity="center"
                        android:text="01096973909"
                        android:textColor="@color/blackfont"
                        android:textSize="22sp"
                        android:textStyle="bold">

                    </TextView>

                    <Button
                        android:id="@+id/button_phone_woman_number1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_selector_style"
                        android:fontFamily="@font/cairo_bold"
                        android:gravity="center"
                        android:text="@string/call"
                        android:textAllCaps="false"
                        android:textColor="@color/lightorang"
                        android:textSize="22sp"
                        android:textStyle="bold">

                    </Button>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>